# cert-get

./: .gitignore  Cargo.toml  README.md  cert-get.code-workspace
.github/workflows/: build-test.yml  push-pr.workflow.yml  release.yml  rust.yml  tag.workflow.yml
cert-get-cli/: Cargo.toml  LICENSE
cert-get-cli/src/: app.rs  main.rs  progress.rs
cert-get-core/: Cargo.toml
cert-get-core-ffi/: Cargo.toml  ffi-example.cpp
cert-get-core-ffi/src/: lib.rs
cert-get-core/src/: error.rs  lib.rs
cert-get-gtk/: .gitignore  CMakeLists.txt
cert-get-gtk/src/: main.cpp  main_dialog.glade  run.sh
